[gd_scene load_steps=11 format=3 uid="uid://cesxtk10fira3"]

[ext_resource type="Script" path="res://addons/wyvernbox/ground/ground_item_stack_view_3d.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://pueodad43okn" path="res://addons/wyvernbox/ground/ground_item_label.tscn" id="4"]

[sub_resource type="Gradient" id="1"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.457143, 0.608163, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.609023, 0.443137, 0.443137, 0.513726, 0)

[sub_resource type="GradientTexture2D" id="6"]
gradient = SubResource("1")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 1)

[sub_resource type="GradientTexture2D" id="7"]
gradient = SubResource("1")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="BoxShape3D" id="10"]
size = Vector3(0.3, 0.791451, 0.3)

[sub_resource type="ViewportTexture" id="14"]
viewport_path = NodePath("LabelVP")

[sub_resource type="Animation" id="16"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="11"]
resource_name = "init"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fcqm7"]
_data = {
"RESET": SubResource("16"),
"init": SubResource("11")
}

[node name="Item" type="CharacterBody3D" node_paths=PackedStringArray("display_icon", "display_mesh", "display_colorable") groups=["ground_item"]]
script = ExtResource("2")
display_icon = NodePath("VisItem/Icons/Icon")
display_mesh = NodePath("VisItem/Mesh")
display_colorable = [NodePath("VisItem/Glow"), NodePath("VisItem/Glow/Glow2")]
filter_hidden_color = Color(0.501961, 0.501961, 0.501961, 0.501961)

[node name="VisItem" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.641326, 0)

[node name="Glow" type="Sprite3D" parent="VisItem"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
billboard = 1
double_sided = false
texture = SubResource("6")

[node name="Glow2" type="Sprite3D" parent="VisItem/Glow"]
transform = Transform3D(0.292051, 0, 0, 0, 1.75966, 0, 0, 0, 1, 0, 0, 0)
offset = Vector2(0, 32)
billboard = 2
double_sided = false
texture = SubResource("7")

[node name="Icons" type="Node3D" parent="VisItem"]

[node name="Icon" type="Sprite3D" parent="VisItem/Icons"]
pixel_size = 0.02
billboard = 1
double_sided = false
render_priority = 1

[node name="Mesh" type="MeshInstance3D" parent="VisItem"]

[node name="Shape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.635806, 0)
shape = SubResource("10")

[node name="LabelVP" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(2, 2)

[node name="Label" parent="LabelVP" instance=ExtResource("4")]
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelView" type="Sprite3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 1.23295, 0)
visible = false
billboard = 1
fixed_size = true
render_priority = 20
texture = SubResource("14")

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "init"
libraries = {
"": SubResource("AnimationLibrary_fcqm7")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="LabelVP/Label" to="." method="_on_name_gui_input"]
